...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i9q-Jo-Hyb" userLabel="title">
                                <rect key="frame" x="20" y="69" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="title"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Tutorial" id="KOA-RT-uJd">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="neY-8U-q3c">
                            <connections>
                                <action selector="ClickNext:" destination="yuD-Rl-uSD" id="zhi-Cw-eeh"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="Z5M-iw-YEh">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="DuX-q5-3hc">
                            <connections>
                                <action selector="SavePressed:" destination="1eL-Qf-eHn" id="FLO-Yx-E4A"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Tutorials" id="Afr-W3-LWG"/>
                    <connections>
                        <outlet property="laodIndicator" destination="fKx-Lp-qug" id="GIE-Au-PYE"/>
...
        <scene sceneID="OaS-kl-1fD">
            <objects>
                <viewController storyboardIdentifier="showEditOptions" title="Edit Tutorial" id="SAZ-ht-ZDi" customClass="TutorialEditOptionsController" customModule="ConariUnitTests" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Q8o-go-CcB"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <segue destination="MDP-0C-mzj" kind="show" id="Z8E-oP-98x"/>
...
                                <rect key="frame" x="20" y="206" width="560" height="114"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tutorialcloud" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1h-mV-kvb">
                                <rect key="frame" x="20" y="328" width="560" height="21"/>
                                <constraints>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uOm-M1-Wne">
                                <rect key="frame" x="20" y="189" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="20" y="218" width="560" height="30"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="username"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="nAU-Tj-3Z3"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14g-AG-9xB">
                                <rect key="frame" x="20" y="256" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="v6g-Bf-n9q">
                                <rect key="frame" x="20" y="285" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="fBB-2F-HII"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dXZ-Rr-w2N">
                                <rect key="frame" x="20" y="168" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="newEmail"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8Lq-Kr-wke">
                                <rect key="frame" x="20" y="235" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="repeatedEmail">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i9Q-GB-BNr">
                                <rect key="frame" x="20" y="273" width="560" height="36"/>
                                <accessibility key="accessibilityConfiguration" label="DoneButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="Done_button_clicked:" destination="5NY-U5-0e2" eventType="touchUpInside" id="x4u-mr-8i6"/>
...
                        </constraints>
                    </view>
