...
  @IBOutlet weak var titleTextField: UITextField!
  @IBOutlet weak var difficultyLabel: UILabel!
  @IBOutlet weak var difficultyStepper: UIStepper!
  

  // MARK: - category, difficulty and time definitions
  var categories = ["Arts and Entertainment",
                    "Cars & Other Vehicles",
                    "Computers and Electronics",
                    "Conari",
                    "Education and Communications",
                    "Finance and Business",
                    "Food and Entertaining",
...
