...
  {
    super.viewDidLoad()
    self.view.backgroundColor = Constants.viewBackgroundColor
        
    if TextOrVideo == 1
    {
      TutorialTitle.title = "Video Tutorial"
      NextButton.title = "Upload"
    }
    else
    {
      TutorialTitle.title = "Text Tutorial"
      SelectVideoButton.hidden = true
      VideoThumbnail.hidden = true
    }
    
    DifficultyStepper_.maximumValue = 5
    DifficultyStepper_.minimumValue = 1
...
